Form field for adding notes.

--- a/quotehi/templates/add.html
+++ b/quotehi/templates/add.html
@@ -3,6 +3,9 @@
 
 <form action="add" method="POST">
   <p>Content: <textarea rows=10 cols=50 name="quote"></textarea></p>
+  <p>Notes: <input type="text" name="notes"/></p>
   <p>Tags: <input type="text" name="tags"/></p>
   <p><input type="submit"/></p>
 </form>
+
+<%def name="title()">Add New Quote</%def>
