Minor cosmetic tweaks.

--- a/quotehi/templates/added.html
+++ b/quotehi/templates/added.html
@@ -1,5 +1,5 @@
 
 <%inherit file="base.html"/>
 <p>Your quote has been added. Click 
-<a href="${h.url(controller='post',action='add')}">here</a> to add
+<a href="${url(controller='post',action='add')}">here</a> to add
 another quote.</p>
