Use <pre> for IRC quotes. Thanks, n9986 :)

--- a/quotehi/templates/index.html
+++ b/quotehi/templates/index.html
@@ -29,7 +29,7 @@
 
 % for quote in c.quotes:
 <div id="quote" style="background-color:#EEEEFF">
-    <p>${quote['quote']}</p>
+    <pre>${quote['quote']}</pre>
     <strong>Tags:</strong>
 %   for tag in quote['tags']:
       ${tag} 
