Added jQuery to the base template.

--- a/quotehi/templates/base.html
+++ b/quotehi/templates/base.html
@@ -2,6 +2,8 @@
 <!DOCTYPE HTML>
 <html>
   <head>
+    <script language="javascript" type="text/javascript" src="jquery-1.4.2.js">
+    </script>
     <title>QuoteHI - ${self.title()}</title>
   </head>
 
