Fixed jQuery import.

--- a/quotehi/templates/base.html
+++ b/quotehi/templates/base.html
@@ -2,7 +2,8 @@
 <!DOCTYPE HTML>
 <html>
   <head>
-    <script language="javascript" type="text/javascript" src="jquery-1.4.2.js">
+    <script language="javascript" type="text/javascript"
+	    src="${url('/static/jquery-1.4.2.js')}">
     </script>
     <title>QuoteHI - ${self.title()}</title>
   </head>
