Removed added.html and the corresponding redirect in PostController. The Add Quote button in add.html is now hidden until the request returns.

--- a/quotehi/templates/add.html
+++ b/quotehi/templates/add.html
@@ -3,7 +3,8 @@
 
 <script language="javascript" type="text/javascript">
   function add_quote() {
-    $("div#submitting").html = "Submitting quote ...";
+    $("button#submitting").html("Adding quote ...");
+    $("button#submitting").attr("disabled", "disabled");
     var quote = $("textarea#quote").val();
     var notes = $("input#notes").val();
     var tags = $("input#tags").val();
@@ -15,17 +16,17 @@
         return to the <a href=\"${url(controller='show', action='index')}\">\
 	home page</a> or continue adding quotes below.";
         $("div#success_msg").html(success_msg);
-        $("div#submitting").html("");
+        $("button#submitting").html("Add Quote");
+        $("button#submitting").attr("disabled", false);
       }
     );
   }
 </script>
 
-<div id="success_msg"></p></div>
+<div id="success_msg"></div>
 <p>Content:<br/><textarea rows=10 cols=50 id="quote"></textarea></p>
 <p>Notes:<br/><input type="text" id="notes"/></p>
 <p>Tags:<br/><input type="text" id="tags"/></p>
-<p><button onclick="add_quote()">Add Quote</button>
-   <div id="submitting"></div></p>
+<p><button id="submitting" onclick="add_quote()">Add Quote</button></p>
 
 <%def name="title()">Add New Quote</%def>
