--- a/quotehi/templates/base.html
+++ b/quotehi/templates/base.html
@@ -20,6 +20,12 @@
   <p>
     <a href="${url(controller='show', action='index')}">Home</a>
     <a href="${url(controller='post', action='add')}">Add</a>
+%   if session.get('logged_in') is True: 
+      <a href="${url(controller='admin', action='logout')}">
+	Logout (${session.get('email')})</a>
+%   else:
+      <a href="${url(controller='admin', action='login')}">Login</a>
+%   endif
   <hr />
 </%def>
 
