--- a/quotehi/templates/index.html
+++ b/quotehi/templates/index.html
@@ -1,5 +1,5 @@
 
-<%inherit file="base.html"/>
+<%inherit file="/base.html"/>
 
 <script language="javascript" type="text/javascript">
   function vote_request(url, id, delta) {
@@ -59,5 +59,7 @@
     </p>
 </div>
 % endfor
+
+<%include file="/paginate.html"/>
 
 <%def name="title()">Home</%def>
