Fix pagination on various pages.

--- a/quotehi/templates/flagged.html
+++ b/quotehi/templates/flagged.html
@@ -1,8 +1,7 @@
 <%inherit file="/base.html"/>
 
 % for quote in c.quotes:
-    <div>${quote['_id']}</div>
+    <div>${quote['quote']}</div>
 % endfor
 
-
-<%include file="/paginate.html"/>
+${c.pages}
