--- a/quotehi/templates/base.html
+++ b/quotehi/templates/base.html
@@ -36,3 +36,20 @@
 </%def>
 
 <%def name="title()">QuoteHI</%def>
+
+<%def name="paginate(ctrl, act, pages, current)">
+<div id="pages">
+  <center>Page:
+%   if pages == 0:
+      <strong>1</strong>
+%   else:
+%     for i in range(1, pages+1):
+%       if i == current:
+          <strong>${i}</strong>
+%       else:
+          <a href="${url(controller=ctrl, action=act, id=i)}">${i}</a>
+%       endif
+%     endfor
+%  endif
+  </center>
+</div></%def>
