--- a/quotehi/templates/base.html
+++ b/quotehi/templates/base.html
@@ -21,6 +21,7 @@
     <a href="${url(controller='show', action='index')}">Home</a>
     <a href="${url(controller='post', action='add')}">Add</a>
     <a href="${url(controller='show', action='queue')}">Queue</a>
+    <a href="${url(controller='show', action='flagged')}">Flagged</a>
 %   if session.get('logged_in') is True: 
       <a href="${url(controller='admin', action='logout')}">
 	Logout (${session.get('email')})</a>
