What does next.body() do anyway?

--- a/quotehi/templates/base.html
+++ b/quotehi/templates/base.html
@@ -10,7 +10,7 @@
 
   <body>
     <div class="header">${self.header()}</div>
-    <div class="content">${next.body()}</div>
+    <div class="content">${self.body()}</div>
     <div class="footer">${self.footer()}</div>
   </body>
 </html>
