--- a/quotehi/templates/base.html
+++ b/quotehi/templates/base.html
@@ -1,10 +1,11 @@
-
 <!DOCTYPE HTML>
+
+<%def name="title()">QuoteHI</%def>
+
 <html>
   <head>
     <script language="javascript" type="text/javascript"
-	    src="${url('/static/jquery-1.4.2.js')}">
-    </script>
+      src="${url('/static/jquery-1.4.2.js')}"></script>
     <title>QuoteHI - ${self.title()}</title>
   </head>
 
@@ -23,8 +24,7 @@
     <a href="${url('queued')}">Queue</a>
     <a href="${url('flagged')}">Flagged</a>
 %   if session.get('logged_in') is True: 
-      <a href="${url('logout')}">
-	Logout (${session.get('email')})</a>
+      <a href="${url('logout')}">Logout (${session.get('email')})</a>
 %   else:
       <a href="${url('login')}">Login</a>
 %   endif
@@ -36,21 +36,21 @@
   <p>Powered by QuoteHI.</p>
 </%def>
 
-<%def name="title()">QuoteHI</%def>
-
 <%def name="paginate(ctrl, act, pages, current)">
-<div id="pages">
-  <center>Page:
-%   if pages == 0:
-      <strong>1</strong>
-%   else:
-%     for i in range(1, pages+1):
-%       if i == current:
-          <strong>${i}</strong>
-%       else:
-          <a href="${url(controller=ctrl, action=act, id=i)}">${i}</a>
-%       endif
-%     endfor
-%  endif
-  </center>
-</div></%def>
+  <div id="pages">
+    <center>Page:
+%     if pages == 0:
+        <strong>1</strong>
+%     else:
+%       for i in range(1, pages+1):
+%         if i == current:
+            <strong>${i}</strong>
+%         else:
+            <a href="${url(controller=ctrl, action=act, id=i)}">${i}</a>
+%         endif
+%       endfor
+%    endif
+    </center>
+  </div>
+</%def>
+
